@@ -162,3 +162,26 @@ spotless {
 }
 
 compileJava.dependsOn 'spotlessApply'
+
+ext.moduleName = 'ubicrypt'
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+def java_home = System.getenv('JAVA_HOME')
+task link(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+
+    workingDir 'build'
+
+    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
+            '--add-modules', 'ubicrypt', '--launcher', "ubicrypt=${mainClassName}", '--output', 'dist', '--strip-debug',
+            '--compress', '2', '--no-header-files', '--no-man-pages'
+}
